--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- --------- Owl-Carousel ------------------->
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/owl.theme.default.min.css">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5438780434006382"
+     crossorigin="anonymous"></script>
     <!-- ------------ AOS Library ------------------------- -->
     <link rel="stylesheet" href="./css/aos.css">
 
