--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SyncBlogs</title>
+    <title>-SyncBlogs</title>
     <link rel = "icon" href = 
     "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" 
             type = "image/x-icon">
